iniciando modificações em HTML no projeto MVC Asp.Net Core

--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Privacy.cshtml
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Privacy.cshtml
@@ -1,6 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Biografia";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<h1><p>Olá! Eu Sou o Lukas.</p></h1>
+
+    <h5>
+   
+       <p>Formado em Analise e desenvolvimento de sistemas</p> 
+       <p>Endereço : Rua Nicolau Tolentino de Almeida 99</p>
+       <p>Contato: (11) 976632265 // Email: Lukas.mota@outlook.com</p>
+   
+    </h5>
+
+
+<h3>
+<h3>Stack de programação:</h3>
+<p>Programação Orientada a Objeto</p>
+<p>Tratamento de Exceções</p>
+<p>Desenvolvimento .NET / Asp.Net</p>
+<p>Linguagem de Programação CSharp</p>
+<p>MVC & Clean Code</p>
+
+<h3>Conhecimento em Banco de dados</h3>
+<p>MySQL</p>
+<p>Oracle</p>
+<p>SQL Server</p>
+<p>Linguagem de Programação SQL</p>
+
+<h3>Versionamento de Código</h3>
+<p>Git & GitHub</p>
+</h3>
+
