--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Seja Bem Vindo Ao Meu Síte Asp.NET Core MVC! </p>
+    <p>Volte Sempre!</p>
 </div>
