Instanciando homemodel e enserindo valor para elas e retornando pra view os valores passados.

--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Privacy.cshtml
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Privacy.cshtml
@@ -3,32 +3,34 @@
 }
 
 
-<h1><p>Olá! Eu Sou o Lukas.</p></h1>
+<div class="text-center">
+    <h1><p>Olá! Eu Sou o Lukas!</p></h1>
 
     <h5>
    
-       <p>Formado em Analise e desenvolvimento de sistemas</p> 
-       <p>Endereço : Rua Nicolau Tolentino de Almeida 99</p>
-       <p>Contato: (11) 976632265 // Email: Lukas.mota@outlook.com</p>
+       <p>Formado em Analise e Desenvolvimento de Sistemas</p> 
+       <p>Endereço : Rua Nicolau Tolentino de Almeida 99, São Paulo - SP</p>
+       <p>Contato: (11) 97663-2265 // Email: Lukas.mota@outlook.com</p>
    
     </h5>
-
+</div>
+<br/>
 
 <h3>
-<h3>Stack de programação:</h3>
+    <p><h3>Stack de programação:</h3></p>
 <p>Programação Orientada a Objeto</p>
 <p>Tratamento de Exceções</p>
 <p>Desenvolvimento .NET / Asp.Net</p>
 <p>Linguagem de Programação CSharp</p>
 <p>MVC & Clean Code</p>
 
-<h3>Conhecimento em Banco de dados</h3>
+    <p><h3>Conhecimento em Banco de dados</h3></p>
 <p>MySQL</p>
 <p>Oracle</p>
 <p>SQL Server</p>
 <p>Linguagem de Programação SQL</p>
 
-<h3>Versionamento de Código</h3>
+    <p><h3>Versionamento de Código</h3></p>
 <p>Git & GitHub</p>
 </h3>
 
