--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
@@ -1,9 +1,14 @@
-﻿@{
+﻿@model HomeModel
+
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem vindo!</h1>
+    <h1 class="display-4">Bem vindo, @Model.Nome</h1>
     <p>Seja Bem Vindo Ao Meu Síte Asp.NET Core MVC! </p>
+    <span> Seu email é : @Model.Email </span>
+    
     <p>Volte Sempre!</p>
 </div>
