Primeiro Projeto Asp.Net MVC Entendendo funcionalidade, entendendo como é um projeto em 3 camadas.

--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="text-center">
     <h1 class="display-4">Bem vindo, @Model.Nome</h1>
     <p>Seja Bem Vindo Ao Meu Síte Asp.NET Core MVC! </p>
-    <span> Seu email é : @Model.Email </span>
+    <span> Email : @Model.Email </span>
     
     <p>Volte Sempre!</p>
 </div>
