--- a/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Shared/_Layout.cshtml.css
+++ b/OneDrive/Área de Trabalho/repositório/Asp.netCore/Views/Shared/_Layout.cshtml.css
@@ -12,9 +12,9 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #0b0f19 !important;
+    border-color: #0b0f19;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
